manifests/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  namespace: playground
  labels:
    app: db
spec:
  containers:
    - name: postgres
      image: postgres:trixie
      resources:
        requests:
          memory: "64Mi"
          cpu: "20m"
        limits:
          memory: "128Mi"
          cpu:  "150m"
      volumeMounts:
        - mountPath: /var/lib/postgresql
          name: db-volume
  volumes:
    - name: db-volume
      persistentVolumeClaim:
        claimName: postgres-pvc
