manifests/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: playground
  name: worker
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker-pod
          image: elbergui/playground-worker:v5
          resources:
            requests:
              memory: "48Mi"
              cpu: "30m"
            limits:
              memory: "128Mi"
              cpu:  "400m"
          volumeMounts:
            - name: images
              mountPath: /worker/uploads/originals
              subPath: originals
            - name: images
              mountPath: /worker/uploads/processed
              subPath: processed
      volumes:
        - name: images
          persistentVolumeClaim:
            claimName: uploads-pvc
