manifests/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: playground
  name: api-svc
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 5000
