manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: playground
spec:
  ports:
  - port: 5432
  clusterIP: None
  selector:
    app: db
