manifests/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: playground
  name: postgres-svc
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
