manifests/queue.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: playground
  name: queue-svc
spec:
  selector:
    app: queue
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: playground
  name: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue
  template:
    metadata:
      labels:
        app: queue
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          resources:
            requests:
              memory: "64Mi"
              cpu: "15m"
            limits:
              memory: "128Mi"
              cpu:  "80m"
