manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: playground.local
    http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-svc
              port:
                number: 80
