manifests/api.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: playground
  name: api-svc
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: playground
  name: api-network-policy
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: playground
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - image: elbergui/playground-api:v6
          name: api-flask
          resources:
            requests:
              memory: "64Mi"
              cpu: "20m"
            limits:
              memory: "128Mi"
              cpu:  "150m"
          livenessProbe:
            httpGet:
              path: /health/live
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: images
              mountPath: /api/uploads/originals
              subPath: originals
            - name: images
              mountPath: /api/uploads/processed
              subPath: processed
      volumes:
        - name: images
          persistentVolumeClaim:
            claimName: uploads-pvc
