manifests/playground-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: playground
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: playground
spec:
  podSelector: {}
  policyTypes:
    - Ingress
