manifests/postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: playground
  name: postgres-network-policy
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api
        - podSelector:
            matchLabels:
              app: db-init
        - podSelector:
            matchLabels:
              app: worker
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: database
        # CloudNativePG operator
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
